Table(not working)

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,15 @@
 		"i18n": "i18n/i18n.properties",
 		"appLicationVersion": {
 			"version": "1.0.0"
+		},
+		"dataSources": {
+			"invoiceRemote": {
+				"uri": "https://services.odata.org/V2/Northwind/Northwind.svc/",
+				"type": "OData",
+				"settings": {
+					"odataVersion": "2.0"
+				}
+			}
 		}
 	},
 	"sap.ui": {
@@ -44,6 +53,9 @@
 			"invoice": {
 				"type": "sap.ui.model.json.JSONModel",
 				"uri": "/JSON/Invoices.json"
+			},
+			"remote": {
+				"dataSource": "invoiceRemote"
 			}
 		},
 		"routing": {
