--- a/manifest.json
+++ b/manifest.json
@@ -6,15 +6,6 @@
 		"i18n": "i18n/i18n.properties",
 		"appLicationVersion": {
 			"version": "1.0.0"
-		},
-		"dataSources": {
-			"invoiceRemote": {
-				"uri": "https://services.odata.org/V2/Northwind/Northwind.svc/",
-				"type": "OData",
-				"settings": {
-					"odataVersion": "2.0"
-				}
-			}
 		}
 	},
 	"sap.ui": {
@@ -53,9 +44,6 @@
 			"invoice": {
 				"type": "sap.ui.model.json.JSONModel",
 				"uri": "/JSON/Invoices.json"
-			},
-			"remote": {
-				"dataSource": "invoiceRemote"
 			}
 		},
 		"routing": {
@@ -69,23 +57,23 @@
 			"routes": [
 				{
 					"pattern": "",
-					"name": "overview",
-					"target": "overview"
+					"name": "cart",
+					"target": "cart"
 				},
 				{
-					"pattern": "detail",
-					"name": "detail",
-					"target": "detail"
+					"pattern": "",
+					"name": "justList",
+					"target": "justList"
 				}
 			],
 			"targets": {
-				"overview": {
-					"viewId": "overview",
-					"viewName": "Overview"
+				"cart": {
+					"viewId": "cart",
+					"viewName": "Cart"
 				},
 				"detail": {
-					"viewId": "detail",
-					"viewName": "Detail"
+					"viewId": "justList",
+					"viewName": "JustList"
 				}
 			}
 		}
